--- a/WebApp/main/templates/main/addagent.html
+++ b/WebApp/main/templates/main/addagent.html
@@ -16,7 +16,7 @@
             <div class="card-body d-flex flex-column">
                 <h5 class="card-title">Dedupe</h5>
                 <p class="card-text">Dedupe is a deduplication library performing fuzzy matching of records using human
-                    labeled input (active learning). Use Dedupe Agents to find typos in entries with common names.</p>
+                    labeled input (active learning). Use Dedupe Agents to find permutations in common entries.</p>
 
                 <strong>Example Smells:</strong>
                 <ul>
@@ -35,7 +35,7 @@
             <img class="card-img-top p-4" src="{% static 'main/gensim_logo.png' %}" alt="gensim Logo">
             <div class="card-body d-flex flex-column">
                 <h5 class="card-title">gensim</h5>
-                <p class="card-text">Gensim is a topic modelling library using the word2vec algorithm. Use gensim to
+                <p class="card-text">Gensim is a topic modelling library using the Word2Vec algorithms. Use gensim to
                     find semantically similar data entries and synonyms.</p><br />
                 <strong>Example Smells:</strong>
                 <ul>
@@ -53,7 +53,7 @@
             <div class="card-body d-flex flex-column">
                 <h5 class="card-title">LSTM Classification</h5>
                 <p class="card-text">TensorFlow is a library for easy implementation of neural networks. This
-                    approach utilizes an LSTM to perform character-level classification of text columns.</p>
+                    TensorFlow approach utilizes an LSTM to perform character-level classification of text columns.</p>
                 <strong>Example Smells:</strong>
                 <ul class="text-left">
                     <li>Date as DateTime Smell</li>
