--- a/WebApp/main/templates/main/duplicates.html
+++ b/WebApp/main/templates/main/duplicates.html
@@ -1,8 +1,10 @@
 {% extends "main/baseloggedin.html" %}
 
 {% block content %}
-<div class="container pt-5">
-    <h3 class="mb-3">Gensim Results: {{dataset.name}} ({{column.name}})</h3>
+<div class="container pt-5">    
+    <h3>Synonym Detection Results</h3>
+    <p><strong>Agent</strong>: Manual Filtering <br />
+    <strong>Dataset</strong>: {{dataset.name}}</p>
     <a href="/download"><button class="btn btn-success"><span class="oi oi-data-transfer-download"></span> Download
             Results</button></a>
     <h5 class="mt-3">Synonymous pairs ({{matches.items|length}} found)</h5>
@@ -29,7 +31,7 @@
                             <h5 class="mb-0">
                                 <button class="btn btn-link" data-toggle="collapse" data-target="#collapse{{pairnum}}_1"
                                     aria-controls="#collapse{{pairnum}}_1">
-                                    Show example occurences of {{pair.word1}}.
+                                    Show example occurences of {{pair.word1}}
                                 </button>
                             </h5>
                         </div>
@@ -46,7 +48,7 @@
                             <h5 class="mb-0">
                                 <button class="btn btn-link" data-toggle="collapse" data-target="#collapse{{pairnum}}_2"
                                     aria-controls="#collapse{{pairnum}}_2">
-                                    Show example occurences of {{pair.word2}}.
+                                    Show example occurences of {{pair.word2}}
                                 </button>
                             </h5>
                         </div>
